--- a/css/chat.css
+++ b/css/chat.css
@@ -1,15 +1,23 @@
+.header-wrapper {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  background-color: white;
+  padding: 5px 0px;
+  box-shadow: 0 18px 36px -18px rgba(0, 0, 0, 0.3),
+    0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+}
+
 .chats-body {
-  padding: 0;
+  padding: 10px 0px;
+  padding-top: 100px;
+  background-image: url("../images/chatBg.png");
+  min-height: 1000vh;
 }
 
 .chats-body .header,
 .chats-body .status-bar {
   padding: 0px 20px;
-}
-
-.chat-screen {
-  background-image: url("../images/chatBg.png");
-  min-height: 100vh;
 }
 
 .chat__write {
@@ -96,11 +104,12 @@
 
 .message .message__bubble {
   background-color: white;
-  box-shadow: 0 30px 60px -12px rgba(50, 50, 93, 0.25),
-    0 18px 36px -18px rgba(0, 0, 0, 0.3), 0 -12px 36px -8px rgba(0, 0, 0, 0.025);
+  display: block;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px,
+    rgba(0, 0, 0, 0.024) 0px -6px 16px -6px;
   padding: 10px 20px;
   border-radius: 20px;
-  display: block;
   color: white;
   font-weight: 600;
 }
